[project]
name = "FTzard"
version = "1.0.0"
requires-python = ">=3.10"



[tool.pixi.project]
name = "FTzard"
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]


[tool.pixi.pypi-dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
dagster = "*"
dagstermill="*"
mlflow = "*"
dvc = "*"
transformers = "*"
accelerate = "*"
datasets = "*"
bitsandbytes = "*"
peft = "*"
torch = "*"
ftzard = { path = ".", editable = true }
ipykernel = "*"
universal_pathlib = "*"
hydra-core = "*"
trl = "*"
dvc-gdrive = "*"
