[project]
name = "FTzard"
version = "1.0.0"
requires-python = ">=3.8"



[tool.pixi.project]
name = "FTzard"
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
cudatoolkit = "~=11.7.1"



[tool.pixi.pypi-dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
dagster = "*"
dagstermill="*"
mlflow = "*"
dvc = "*"
transformers = "*"
accelerate = "*"
datasets = "*"
bitsandbytes = "*"
peft = "*"
ftzard = { path = ".", editable = true }
ipykernel = "*"
universal_pathlib = "*"
torch = "~=2.0.0"
setuptools="~=69.5.1"
hydra-core = "*"
trl = "*"
dvc-gdrive = "*"
jupyterlab = "*" 
optuna = "*"
joblib = "*"

[tool.pixi.system-requirements]
linux = "5.8"
