[project]
name = "FTzard"
version = "1.0.0"
requires-python = ">=3.8"



[tool.pixi.project]
name = "FTzard"
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
cudatoolkit = "~=11.7.1"



[tool.pixi.pypi-dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
dagster = "*"
dagstermill="*"
mlflow = "*"
dvc = "*"
transformers = "*"
accelerate = "*"
datasets = "*"
bitsandbytes = "*"
peft = "*"
ftzard = { path = ".", editable = true }
ipykernel = "*"
universal_pathlib = "*"
torch = "~=2.0.0"
setuptools="~=69.5.1"
hydra-core = "*"
trl = "*"
dvc-gdrive = "*"
jupyterlab = "*" 
optuna = "*"
joblib = "*"
dagster-webserver = "*"

[tool.pixi.tasks]
local_jupyter = "jupyter lab --port 8081 --ip 0.0.0.0 --allow-root"
mlflow_ui = "mlflow ui --backend-store-uri sqlite:///ftzard/pipeline/notebooks/mlflow.db --host 0.0.0.0"
dagster_ui = "dagster dev --port 8081 --host 0.0.0.0"

[tool.pixi.system-requirements]
linux = "5.8"

[tool.dagster]
module_name = "ftzard"

[tool.setuptools.packages.find]
include = ["ftzard"]
exclude = ["config_link"]
